--- a/aacf.html
+++ b/aacf.html
@@ -5,7 +5,7 @@
     <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
     
     <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css" />
-    <link rel="stylesheet" href="https://github.com/jlim2017/aacf-website/blob/master/main.css">
+    <link rel="stylesheet" href="main.css">
     
   </head>
 
@@ -91,6 +91,6 @@
 	</div>
 
   <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
-  <script src='https://github.com/jlim2017/aacf-website/blob/master/aacf.js'></script>
+  <script src='aacf.js'></script>
   </body>
 </html>\
